<resources>
    <string name="app_name">Loan</string>

    <!--Base-->
    <string name="next_step">Next</string>

    <!--Intro Fragment-->
    <string name="intro_create_account">Create account</string>
    <string name="intro_log_in">Log in</string>

    <!--Info Fragment-->
    <string name="info_title">Get a loan</string>
    <string name="info_description">Get a micro-loan in less than 5 minutes.</string>

    <!--Choose Language Fragment-->
    <string name="choose_language_title">Choose your preferred language</string>
    <string name="choose_language_hint">Select language</string>

    <!--Languages Fragment-->
    <string name="languages_title">Select language</string>
    <string name="languages_error">Error! Try again</string>

    <!--Phone Number Fragment-->
    <string name="phone_number_title">Please enter your phone number</string>
    <string name="phone_number_prefix">+91</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="phone_number_helper">You\'ll receive an SMS with a verification code. You need an Indian phone number
    </string>

    <!--Phone Confirmation Fragment-->
    <string name="phone_confirmation_title">Enter the confirmation code you received via SMS</string>
    <string name="phone_confirmation_description">Please confirm your phone number</string>
    <string name="phone_confirmation_helper">Did you not receive the code?</string>
    <string name="phone_confirmation_helper_caption">Send again</string>

    <!--Pin Creation Fragment-->
    <string name="pin_creation_title">Create a pin</string>
    <string name="pin_creation_helper">Please choose a PIN you will remember</string>

    <!--Pin Confirmation Fragment-->
    <string name="pin_confirmation_title">Confirm the pin</string>
    <string name="pin_confirmation_helper">Enter the PIN again to confirm</string>

    <!--Email Entering Fragment-->
    <string name="email_entering_title">Please enter your e-mail address</string>
    <string name="email_entering_hint">Enter e-mail address</string>
    <string name="email_entering_helper">Don\'t have an e-mail address?</string>
    <string name="email_entering_caption">Skip</string>

    <!--First Name Fragment-->
    <string name="first_name_title">What is your legal first name?</string>
    <string name="first_name_hint">First name</string>

    <!--Last Name Fragment-->
    <string name="last_name_title">What is your legal last name?</string>
    <string name="last_name_hint">Last name</string>

    <!--Education Level Fragment-->
    <string name="education_level_title">What is your highest level of education?</string>
    <array name="education_level_items">
        <item>None</item>
        <item>Primary</item>
        <item>Secondary / High School</item>
        <item>College / University</item>
        <item>Masters / PhD</item>
    </array>

    <!--Employment Fragment-->
    <string name="employment_title">Check all that apply to you</string>
    <array name="employment_items">
        <item>Have a fulltime job</item>
        <item>Have a part-time job</item>
        <item>Self employed</item>
        <item>Student</item>
        <item>No income</item>
    </array>

    <!--Allow Permissions Fragment-->
    <string name="allow_permissions_title">Please enable a few permissions on your phone</string>
    <string name="allow_permissions_description">
        We uses the data on your phone to make lending decisions. We never share this data with 3rd parties.
        \n
        \nPlease click «Allow access» to give the app access to your contacts, location, phone and SMS.
    </string>
    <string name="allow_permissions_allow_access">Allow access</string>
    <string name="allow_permissions_learn_more">Learn more</string>
    <string name="allow_permissions_error">You should allow all permissions to continue</string>

    <!--Welcome Fragment-->
    <string name="welcome_title">Welcome, %s!</string>
    <string name="welcome_description">
        We are very happy to have you on the platform. Before we can give you a loan, we need to verify your identity
    </string>
    <string name="welcome_verify_identity">Verify identity</string>
    <string name="welcome_skip">Skip for now</string>

    <!--Home Fragment-->
    <string name="home_chat">Chat</string>
    <string name="home_feed">Feed</string>
    <string name="home_profile">Profile</string>

    <!--Feed Fragment-->
    <string name="feed_title">Welcome!</string>
    <string name="feed_loan_title">Apply for a loan</string>
    <string name="feed_loan_description">Receive a loan of up to ₹4000 in minutes</string>
    <string name="feed_loan_action">Apply</string>
    <string name="feed_refer_title">Refer a friend</string>
    <string name="feed_refer_description">When you refer a friend, you both receive a discount</string>
    <string name="feed_refer_action">Invite</string>
    <string name="feed_increase_score_title">How to increase your credit score</string>
    <string name="feed_increase_score_action">Read</string>

    <!--Profile Fragment-->
    <string name="profile_title">Profile</string>
    <string name="profile_credit_score">Credit score</string>
    <string name="profile_loan_qualify_title">Congrats!</string>
    <string name="profile_loan_track_title">You\'re on track!</string>
    <string name="profile_loan_qualify_description">You qualify for a loan of ₹%s</string>
    <string name="profile_loan_track_description">₹1,250 is due on Monday (Feb 12)</string>
    <string name="profile_loan_apply">Apply for a loan</string>
    <string name="profile_loan_repay">Repay loan</string>
    <string name="profile_loan_see_more">See more</string>

    <!--Chat Fragment-->
    <string name="chat_title">Chat</string>

    <!--Help Fragment-->
    <string name="help_title">Help</string>

    <!--Tip Fragment-->
    <string name="tip_title">Tips</string>
    <string name="tip_header">How to increase your credit score</string>
    <string name="tip_subheader">
        No matter what your background and job situation is, there are many ways you can optimize and improve your
        credit score. Here are some of the most easiest ways.
    </string>
    <string name="tip_description">
        No matter what your background and job situation is, there are many ways you can optimize and improve your
        credit score. Here are some of the most easiest ways.
    </string>

    <!--Date Of Birth Fragment-->
    <string name="date_of_birth_title">When were you born?</string>
    <string name="date_of_birth_hint">DD/MM/YYYY</string>

    <!--Application Intro Fragment-->
    <string name="application_intro_title">Loan application</string>
    <string name="application_intro_description">
        Before we can give you a loan, we have to ask you a few more questions. Please be honest, and answer
        the questions on your own. If you are unsure about a question, answer what you think is most correct.
    </string>
    <string name="application_intro_start">Start application</string>

    <!--Gender Fragment-->
    <string name="gender_title">What is your gender</string>
    <string name="gender_hint">Select gender</string>
    <array name="gender_items">
        <item>Female</item>
        <item>Male</item>
        <item>Custom</item>
    </array>

    <!--Home Address Fragment-->
    <string name="home_address_title">What is your home address?</string>
    <string name="home_address_state_hint">Enter state</string>
    <string name="home_address_city_hint">Enter city</string>
    <string name="home_address_street_hint">Enter street</string>

    <!--Occupation Fragment-->
    <string name="occupation_title">What is your occupation?</string>
    <string name="occupation_hint">Enter occupation</string>

    <!--Work Address Fragment-->
    <string name="work_address_title">What is your work address?</string>

    <!--Working Period Fragment-->
    <string name="working_period_title">How long have you worked there?</string>
    <array name="working_period_items">
        <item>Less than 1 month</item>
        <item>1-12 months</item>
        <item>1-3 years</item>
        <item>3-5 years</item>
        <item>More than 5 years</item>
    </array>

    <!--Selfie Fragment-->
    <string name="selfie_title">Please take a selfie</string>

    <!--Selfie Preview Fragment-->
    <string name="selfie_preview_title">Make sure the image is not blurry, and has good lightning</string>
    <string name="selfie_preview_retake">Retake</string>
    <string name="selfie_preview_use_photo">Use photo</string>

    <!--Identity Verified Fragment-->
    <string name="identity_verified_title">Identity verified!</string>
    <string name="identity_verified_description">
        We have now verified your identity, and you can apply for a loan
    </string>
    <string name="identity_verified_ok">Ok</string>

    <!--Sign In Fragment-->
    <string name="sign_in_action">Sign in</string>

    <!--Phone Fragment-->
    <string name="phone_description">Hi and welcome back!</string>

    <!--Pin Fragment-->
    <string name="pin_title">Enter your personal pin</string>

    <!--Loan Purpose Fragment-->
    <string name="loan_purpose_title">Loan purpose</string>

    <!--Purpose Description Fragment-->
    <string name="purpose_description_title">What will you use the loan for?</string>
    <string name="purpose_description_spinner_hint">Loan purpose</string>
    <string name="purpose_description_detail_hint">Describe in more detail</string>

    <!--Outstanding Loans Fragment-->
    <string name="outstanding_loans_title">Do you have any outstanding loans?</string>
    <array name="outstanding_loan_items">
        <item>Yes</item>
        <item>No</item>
        <item>I don\'t know</item>
    </array>

    <!--Loan Congratulations Fragment-->
    <string name="loan_congratulations_title">Congratulations!</string>
    <string name="loan_congratulations_description">
        You are eligible for a loan of up to %s INR.
        Please look over the details and select how much you would like to loan.
    </string>
    <string name="loan_congratulations_rate">Monthly rate</string>
    <string name="loan_congratulations_payback">Payback</string>
    <string name="loan_congratulations_amount">Select amount</string>
    <string name="loan_congratulations_not_now">Not now</string>

    <!--Payment Amount Fragment-->
    <string name="payment_amount_title">How much money do you want to loan?</string>
    <string name="payment_amount_hint">Enter amount</string>
    <string name="payment_amount_helper">Min %s IDR, max %s IDR</string>

    <!--Payment Method Fragment-->
    <string name="payment_method_title">Where would you like the money to be paid to?</string>
    <string name="payment_method_paytm">Paytm</string>

    <plurals name="month">
        <item quantity="zero">months</item>
        <item quantity="one">month</item>
        <item quantity="two">months</item>
        <item quantity="few">months</item>
        <item quantity="many">months</item>
        <item quantity="other">months</item>
    </plurals>

</resources>
