<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.evgvin.loan.ui.languages.LanguagesFragment">

    <data>

        <variable
                name="viewModel"
                type="com.evgvin.loan.ui.allow_permissions.AllowPermissionsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BaseToolbar"/>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_permissions_title"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/appBar"
                style="@style/TextAppearance.Title"/>

        <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/allow_permissions_description"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toTopOf="@id/btnCreateAccount"
                style="@style/TextAppearance.Description"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_permissions_allow_access"
                android:layout_marginStart="@dimen/intro_horizontal_margin"
                android:layout_marginEnd="@dimen/intro_horizontal_margin"
                android:layout_marginBottom="@dimen/intro_vertical_margin"
                android:onClick="@{() -> viewModel.onAllowAccessClick()}"
                app:layout_constraintBottom_toTopOf="@id/btnLearnMore"
                style="@style/Button.Active"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLearnMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_permissions_learn_more"
                android:layout_marginStart="@dimen/intro_horizontal_margin"
                android:layout_marginEnd="@dimen/intro_horizontal_margin"
                android:layout_marginBottom="@dimen/intro_vertical_margin"
                android:onClick="@{() -> viewModel.onLearnMoreClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Button.Outline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>