<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.evgvin.loan.ui.selfie_preview.SelfiePreviewFragment">

    <data>

        <variable
                name="viewModel"
                type="com.evgvin.loan.ui.selfie_preview.SelfiePreviewViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selfie_preview_title"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/TextAppearance.Description.Tip"/>

        <ImageView
                android:id="@+id/ivAvatarPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin"
                app:layout_constraintTop_toTopOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="@id/btnUsePhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:imageSource="@{viewModel.savedAvatarFile}"/>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selfie_preview_retake"
                android:onClick="@{() -> viewModel.onRetakeClick()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Button.Text"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUsePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selfie_preview_use_photo"
                android:onClick="@{() -> viewModel.onUsePhotoClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Button.Text.Active"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>