<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.evgvin.loan.ui.loan_purpose_detailed_steps.purpose_description.PurposeDescriptionFragment">

    <data>

        <variable
                name="viewModel"
                type="com.evgvin.loan.ui.loan_purpose_detailed_steps.purpose_description.PurposeDescriptionViewModel"/>

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purpose_description_title"
                style="@style/TextAppearance.Title"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/choose_language_input_vertical_margin"
                style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/purpose_description_spinner_hint"
                    android:text="@{viewModel.currentPurposeName}"
                    android:focusable="false"
                    android:drawableEnd="@drawable/spinner_arrow"
                    android:cursorVisible="false"
                    android:onClick="@{() -> viewModel.onSelectPurposeClick()}"
                    style="@style/InputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/choose_language_input_vertical_margin"
                style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:minHeight="@dimen/purpose_description_detailed_edit_text_min_height"
                    android:inputType="text"
                    android:hint="@string/purpose_description_detail_hint"
                    android:text="@={viewModel.currentPurposeDescription}"
                    android:maxLength="@{viewModel.MAX_PURPOSE_DESCRIPTION_LENGTH}"
                    style="@style/InputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</layout>