<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.evgvin.loan.ui.identity_verified.IdentityVerifiedFragment">

    <data>

        <variable
                name="viewModel"
                type="com.evgvin.loan.ui.identity_verified.IdentityVerifiedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BaseToolbar"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
                android:id="@+id/ivImage"
                android:layout_width="168dp"
                android:layout_height="160dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBar"/>

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identity_verified_title"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/welcome_image_vertical_margin"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/ivImage"
                style="@style/TextAppearance.Title"/>

        <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/identity_verified_description"
                android:layout_margin="@dimen/default_margin"
                android:gravity="center_horizontal|top"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toTopOf="@id/btnOk"
                style="@style/TextAppearance.Description"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identity_verified_ok"
                android:layout_marginStart="@dimen/intro_horizontal_margin"
                android:layout_marginEnd="@dimen/intro_horizontal_margin"
                android:layout_marginBottom="@dimen/intro_vertical_margin"
                android:onClick="@{() -> viewModel.onOkClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Button.Active"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>